<resources>
    <string name="app_name">COBOT</string>
    <string name="texto_de_bienvenida">¡BIENVENIDO A COBOT!</string>
    <string name="texto_seleccion_de_robot">Para comenzar elija su robot actor</string>
    <string name="boton_conexion_lista">¡LISTO!</string>
    <string name="hint_texto_de_archivo_seleccionado">......................................</string>
    <string name="boton_abrir_archivo">Seleccionar Obra</string>
    <string name="boton_abrir_obra">CARGAR OBRA </string>
    <string name="texto_seleccion_de_personaje">Seleccione un personaje</string>
    <string name="boton_continuar_a_central">CONTINUAR</string>
    <string name="seleccionar_escena">Seleccione una escena</string>
    <string name="seleccionar_acciones">Seleccione qué acciones hará </string>
    <string name="seleccionar_emocion">Seleccione la emoción </string>
    <string name="personaje_seleccionado1">Personaje:</string>
    <string name="personaje_seleccionado2">Nombre personaje</string>
    <string name="imagen_personaje">Posee la imagen del personaje seleccionado</string>
    <string name="boton_ejecutar_central">EJECUTAR</string>
    <string name="boton_accion_emergente">Acción emergente</string>
    <string name="texto_de_datos_conexion">Ingrese los datos: </string>
    <string name="texto_de_accion_emergente">Normal </string>
    <string name="texto_de_informacion_de_la_conexion">Información de la conexión </string>
    <string name="texto_de_informacion_de_la_conexion_ip"> Conectado al servidor con ip: </string>
    <string name="texto_de_archivo_seleccionado">Ahora seleccione una obra de teatro</string>

    <string name="pref_file_key">com.example.cobot.activities.activitychooserobot.PREFERENCE_FILE_KEY</string>
    <string name="pref_server_ip_address_default">127.0.0.2</string>
    <string name="pref_server_port_default">1235</string>
    <string name="pref_server_ip_address">Server Ip</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_robot_ip_address_default">127.0.0.1</string>
    <string name="pref_robot_port_default">9559</string>
    <string name="pref_robot_ip_address">Robot Ip</string>
    <string name="pref_robot_port">Robot Port</string>

</resources>