<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RLMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TVSeleccionarArchivo"
        android:layout_width="345dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="18dp"
        android:layout_toStartOf="@+id/BAbrirArchivo"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:hint="@string/hint_texto_de_archivo_seleccionado"
        android:textSize="24sp" />

    <Button
        android:id="@+id/BAbrirArchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TVSeleccionarArchivo"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="82dp"
        android:text="@string/boton_abrir_archivo" />

    <Button
        android:id="@+id/BCargarObra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BAbrirArchivo"
        android:layout_alignStart="@id/TVSeleccionarArchivo"
        android:layout_alignEnd="@id/TVSeleccionarArchivo"
        android:layout_marginStart="114dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="-114dp"
        android:layout_marginBottom="30dp"
        android:text="@string/boton_abrir_obra"
        android:visibility="visible" />
</RelativeLayout>