<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RLCentral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CentralActivity">

    <ImageView
        android:id="@+id/IVCharacterIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@id/TVPersonajeSeleccionado"
        android:layout_toLeftOf="@id/TVPersonajeSeleccionado"
        android:contentDescription="@string/imagen_personaje"
        app:srcCompat="@android:drawable/screen_background_dark" />

    <TextView
        android:id="@+id/TVSeleccionEscena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="56dp"
        android:text="@string/seleccionar_escena" />

    <HorizontalScrollView
        android:id="@+id/SVBotonesEscenas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="300dp"
        android:layout_toStartOf="@id/IVCharacterIcon"
        android:layout_toLeftOf="@id/IVCharacterIcon"
        android:layout_toEndOf="@id/TVSeleccionEscena"
        android:layout_toRightOf="@id/TVSeleccionEscena">

        <LinearLayout
            android:id="@+id/LLHEscenas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/TVSeleccionAcciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVSeleccionEscena"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="60dp"
        android:text="@string/seleccionar_acciones" />

    <TextView
        android:id="@+id/TVPersonajeSeleccionado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="@string/personaje_seleccionado1" />

    <TextView
        android:id="@+id/TVNombrePersonaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVPersonajeSeleccionado"
        android:layout_toRightOf="@id/IVCharacterIcon"
        android:text="@string/personaje_seleccionado2"
        android:layout_toEndOf="@id/IVCharacterIcon" />

    <ScrollView
        android:id="@+id/SVAcciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/TVSeleccionAcciones"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="400dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="400dp">

        <GridLayout
            android:id="@+id/GLAcciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/RLEmociones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/TVSeleccionAcciones"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="350dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/BEjecutarCentral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/boton_ejecutar_central" />
</RelativeLayout>