<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChooseRobotActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView5"
        android:layout_alignEnd="@id/textView5"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:text="@string/texto_de_bienvenida"
        android:textDirection="firstStrongRtl"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:text="@string/texto_seleccion_de_robot"
        android:textDirection="firstStrongRtl"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/imgbtn_1"
        android:layout_width="123dp"
        android:layout_height="139dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@id/textView5"
        android:layout_alignParentStart="false"
        android:layout_marginStart="77dp"
        android:layout_marginTop="35dp"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:srcCompat="@drawable/naoicono" />

    <ImageButton
        android:id="@+id/imgbtn_2"
        android:layout_width="129dp"
        android:layout_height="143dp"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@id/textView5"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:scaleType="fitXY"
        android:tooltipText="Send an email"
        app:srcCompat="@drawable/quycaicono" />

    <Button
        android:id="@+id/BListo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/BCambiaripServer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/boton_conexion_lista"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TVServerip"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="10dp"
        android:text="conectado al servidor de ip: " />

    <TextView
        android:id="@+id/TVServerip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/fredoka_one"
        android:text="................................." />

    <Button
        android:id="@+id/BCambiaripServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="202dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/TVServerip"
        android:text="CAMBIAR" />

</RelativeLayout>